[package]
name = "datasketch-minhash-lsh"
version = "0.0.1"
edition = "2018"
authors = ["Stefan Grafberger <s.grafberger@uva.nl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
rand = {version = "^0.7", features = ["small_rng"]}
float-cmp = "0.9.0"
quadrature = "0.1.2"
