[package]
name = "datasketch-minhash-lsh"
description = "A Rust version of the min-hash LSH part of the Python datasketch library"
version = "0.0.1"
edition = "2018"
authors = ["Stefan Grafberger <s.grafberger@uva.nl>"]
license="MIT"
repository = "https://github.com/schelterlabs/rust-minhash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
rand = {version = "^0.7", features = ["small_rng"]}
float-cmp = "0.9.0"
quadrature = "0.1.2"
